--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.3.4",
-    "gridsome": "^0.7.10",
+    "@gridsome/transformer-remark": "^0.6.4",
+    "axios": "^0.21.1",
+    "gridsome": "^0.7.23",
     "gridsome-plugin-netlify-cms": "^1.0.9",
     "gridsome-plugin-netlify-cms-paths": "^0.3.0",
-    "netlify-cms": "^2.10.2"
+    "netlify-cms": "^2.10.88"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
